--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Hello, world!</h1>
 
+
+    <h3 id="inu">from inu with love</h3>
+
     <script src="script/app.js"></script>
 </body>
 </html>
