--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello, world!</h1>
 
 
-    <h3 id="inu">from inu with love</h3>
+    <h3 id="inu">from inu and GS-755 with love</h3>
 
     <script src="script/app.js"></script>
 </body>
